[Rahul] | BAH-3997 | Fix. Bump Java 8 -> 17
Dependecy Versions have been updated to resolve security vulnerabilities